RESOLVED FIXED26670
[Win] REGRESSION (r37793): Hitting back button on Google often gives non-interactive Google page
https://bugs.webkit.org/show_bug.cgi?id=26670
Summary [Win] REGRESSION (r37793): Hitting back button on Google often gives non-inte...
Alice Liu
Reported 2009-06-23 19:49:23 PDT
* SUMMARY If I search for something on Google, then click the back button, I am often shown a "non-interactive" Google - i.e., it behaves like a screenshot of Google. * STEPS TO REPRODUCE (using Safari 4.0 on Windows) 1. Open http://www.google.com/ 2. Type "test" into the search field 3. If Google Suggest comes up, dismiss it by clicking outside of the search field 4. Click the "Google Search" button to search 5. Click the "Back" button in Safari * RESULTS Often, I am given a "non-interactive" page, as if it were just a screenshot of the Google page. * NOTES I can't get this to reproduce if, instead of step 3, I click a search term in Google suggest or click the "Google Search" button in the Google Suggest window - only if I dismiss the search suggestions. Refreshing the page causes Google to load properly.
Attachments
patch authored by oliver (1.28 KB, patch)
2009-06-23 19:50 PDT, Alice Liu
no flags
fix with changelog (1.61 KB, patch)
2009-07-02 16:51 PDT, Oliver Hunt
andersca: review+
Alice Liu
Comment 1 2009-06-23 19:50:48 PDT
Created attachment 31766 [details] patch authored by oliver Posting Oliver Hunt's patch for this bug.
Alice Liu
Comment 2 2009-06-23 19:51:32 PDT
Maciej Stachowiak
Comment 3 2009-06-23 20:49:04 PDT
Patch needs a ChangeLog, and ideally some form of test case.
Maciej Stachowiak
Comment 4 2009-06-23 20:50:11 PDT
(I can't tell if the concepts of the patch are correct on the substance.)
Dave Hyatt
Comment 5 2009-07-02 13:51:32 PDT
Comment on attachment 31766 [details] patch authored by oliver Why is the setNeedsLayout() necessary? I'd have thought the forceLayout would take care of that.
Oliver Hunt
Comment 6 2009-07-02 16:51:13 PDT
Created attachment 32211 [details] fix with changelog
Anders Carlsson
Comment 7 2009-07-02 16:51:59 PDT
Comment on attachment 32211 [details] fix with changelog r=me
Oliver Hunt
Comment 8 2009-07-02 16:56:41 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebKit/win/ChangeLog M WebKit/win/WebCoreSupport/WebFrameLoaderClient.cpp Committed r45508
Note You need to log in before you can comment on or make changes to this bug.