<rdar://problem/6939593> REGRESSION (r37793): Hitting back button on Google often gives non-interactive Google page (26670) <https://bugs.webkit.org/show_bug.cgi?id=26670>

Reviewed by Anders Carlsson

Make windows loader client match mac behaviour more closely.

Canonical link: https://commits.webkit.org/37169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45508 268f45cc-cd09-0410-ab3c-d52691b4dbfc